--- a/CV2.html
+++ b/CV2.html
@@ -6,31 +6,37 @@
        </body>
 </html>
 
-<h1>CV</h1> 
-<h1>CV de Amir berriouche étudiant au lycée turgot BTS Informatique Cybersécurité</h1>
-<h2>Compétences</h2> 
-<h3>Compétences en SISR </h3>
+<h1>CV de Berriouche Amir étudiant au Lycée Turgot BTS Informatique Cybersécurité</h1>
+<h2>Compétences</h2>
+<p>-Compétences en SISR</p>
+<p></p>
 <h3>Gestion de projet</h3>
 
 
 <h3>Développement</h3>
- <p>-SQL</p>
- <p>-CSS</p>
-<p>-HTML</p> 
- <p>-Python</p>
+<p>-SQL</p>
+<p>-CSS</p>
+<p>-Html</p>
+<p>-Python</p>
 
- <h3>Système</h3>
- <p>-Windows</p>
- <p>-Linux</p>
+<h3>Système</h3>
+<p>-Windows</p>
+<p>-Linux</p>
 
 <h3>Virtualisation</h3>
 
 
-<H3>Réseau</H3>
-<P>- Cisco Packet Tracer</P>
-<P>- Cisco Networking Essentials</P>
-<P>- DHCP</P> 
-<P>- DNS</P>
-<P>- Routage cisco</P> 
+<h3>Réseau</h3>
+<p>-Cisco Packet Tracer</p>
+<p>-Cisco Networking Essential</p>
 
-SSSSS
+<h3>Cybersécurité</h3>
+<p>-Rootme</p>
+
+<h3>Economie Droit Management</h3>
+<p>-RGPD</p>
+<p>-Les agents économiques</p>
+
+<h3>Langues</h3>
+<p>-Français</p>
+<p>-Anglais</p>
