--- a/CV2.html
+++ b/CV2.html
@@ -23,6 +23,8 @@
 <p>-Linux</p>
 
 <h3>Virtualisation</h3>
+<p>VmWare</p>
+<p>VirtualBox</p>
 
 
 <h3>Réseau</h3>
@@ -35,6 +37,10 @@
 <h3>Economie Droit Management</h3>
 <p>-RGPD</p>
 <p>-Les agents économiques</p>
+
+<h3>Diplômes</h3>
+<p>Brevet des collège</p>
+<p></p>
 
 <h3>Langues</h3>
 <p>-Français</p>
