--- a/CV2.html
+++ b/CV2.html
@@ -40,8 +40,11 @@
 
 <h3>Diplômes</h3>
 <p>Brevet des collège</p>
-<p></p>
+<p>BAC Pro système numérique option RISC (Réseau informatiques et systèmes communicants)</p>
+<p>Certification PIX</p>
+<p>BAFA</p>
 
 <h3>Langues</h3>
 <p>-Français</p>
 <p>-Anglais</p>
+<p>Espagnol</p>
