--- a/CV2.html
+++ b/CV2.html
@@ -38,11 +38,12 @@
 <p>-RGPD</p>
 <p>-Les agents économiques</p>
 
-<h3>Diplômes</h3>
+<h3>Diplômes et Certification</h3>
 <p>Brevet des collège</p>
 <p>BAC Pro système numérique option RISC (Réseau informatiques et systèmes communicants)</p>
 <p>Certification PIX</p>
 <p>BAFA</p>
+<p>Certification Cisco</p>
 
 <h3>Langues</h3>
 <p>-Français</p>
